# lenna-plugins-extra

./: .gitignore  Cargo.toml  README.md  plugins.json
.github/workflows/: ci.yml
denoise/: .gitignore  319.js  319.js.map  381.js  381.js.map  Cargo.toml  README.md  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map
denoise/src/: denoise.rs  index.js  lib.rs  train.rs
lenna-plugins-extra-py/: Cargo.toml  README.md
lenna-plugins-extra-py/lenna_plugins_extra_py/: __init__.py
lenna-plugins-extra-py/src/: lib.rs
text/: 125.css  125.css.map  125.js  125.js.map  430.css  430.css.map  430.js  430.js.map  447.css  447.css.map  447.js  447.js.map  593.css  593.css.map  593.js  593.js.map  594.js  594.js.map  678.js  678.js.map  730.css  730.css.map  730.js  730.js.map  Cargo.toml  main.css  main.css.map  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map
text/src/: Widget.vue  index.js  lib.rs
timestamp/: 138.css  138.css.map  138.js  138.js.map  218.css  218.css.map  218.js  218.js.map  39.js  39.js.map  594.js  594.js.map  Cargo.toml  main.css  main.css.map  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
timestamp/src/: Widget.vue  index.js  lib.rs
watermark/: 333.js  333.js.map  456.css  456.css.map  456.js  456.js.map  594.js  594.js.map  696.js  696.js.map  741.css  741.css.map  741.js  741.js.map  821.css  821.css.map  821.js  821.js.map  844.js  844.js.map  867.css  867.css.map  867.js  867.js.map  Cargo.toml  README.md  main.css  main.css.map  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
watermark/src/: Widget.vue  index.js  lib.rs  payment.js
