[package]
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
name = "denoise"
version = "0.1.0"
description = "Plugin to denoise images."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin"]
plugin = []

[dependencies]
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
randomforest = "0.1.6"
statistical = "1.0.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lenna_core = { git = "https://github.com/lenna-project/lenna-core", branch="main" }
