[package]
name = "lenna_plugins_extra_py"
version = "0.1.1"
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[features]
default = ["python"]
python = ["ndarray", "ndarray-image", "numpy", "pyo3", "pythonize"]

[dependencies]
image = { version = "0.23", default-features = false, features = ["jpeg", "png"] }
paste = "1.0"
pyo3 = { version = "0.14.1", features = ["extension-module"], optional = true }
ndarray = { version = "0.15.3", optional = true }
ndarray-image = { git = "https://github.com/rust-cv/ndarray-image.git", optional = true }
numpy = { version = "0.14.1", optional = true }
pythonize = { version = "0.14.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lenna_core = {git = "https://github.com/lenna-project/lenna-core", branch="main", features=["python"] }
denoise = { path = "../denoise", default-features=false, features=[] }
text = { path = "../text", default-features=false, features=[] }
watermark = { path = "../watermark", default-features=false, features=[] }

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]
requires-dist = ["numpy"]
