[package]
authors = ["Christian <chriamue@gmail.com>"]
edition = "2018"
name = "watermark"
version = "0.1.0"
description = "Plugin to watermark images."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin"]
plugin = []

[dependencies]
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
photon-rs = "=0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lenna_core = {git = "https://github.com/lenna-project/lenna-core", branch="main" }
